--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I am Nomar - Portfolio</title>
+    <title>Nomar S. Imperio - Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&display=swap" rel="stylesheet"> 
+    <link rel="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
+    <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-    <h1>Hello World 4</h1>
+<header class="site-header">
+    <div class="wrap">
+        <h1>Nomar S. Imperio</h1>
+        <h2>Web Developer</h2>
+    </div><!-- end class wrap -->
+</header>
+
+<main class="site-main">
+    <div class="wrap">
+        <h2>Portfolio</h2>
+
+        <div class="portfolio-wrap">
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-emaids.jpg');">
+                        <a class="view-cta" target="_blank" href="http://emaidsinc.com/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="http://emaidsinc.com/">Emaids</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://www.raincitymaids.com/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://www.raincitymaids.com/">Rain City Maids</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+        </div><!-- end class portfolio-wrap -->
+    </div><!-- end class wrap -->
+</main>
 </body>
 </html>
