--- a/index.html
+++ b/index.html
@@ -38,6 +38,78 @@
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://www.raincitymaids.com/">Rain City Maids</a></h3>
                 </div><!-- end class portfolio-col-inner -->
             </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="http://www.qldsandstone.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="http://www.qldsandstone.com.au/">Elite Sandstone</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://www.bmglegal.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://www.bmglegal.com.au/">BMG</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://www.clarit.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://www.clarit.com.au/">Clarit</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://thehenchman.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://thehenchman.com.au/">Henchman</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://sunriseresidences.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://sunriseresidences.com.au/">Sunrise</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://coolyecoadventures.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://coolyecoadventures.com.au/">Cooly Eco Adventures</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://a2zsolar.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://a2zsolar.com.au/">A2Z Solar</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://www.countrytocoastlawyers.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://www.countrytocoastlawyers.com.au/">Country 2 Coast</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://chrisheneric.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://chrisheneric.com.au/">Chris Heneric</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
         </div><!-- end class portfolio-wrap -->
     </div><!-- end class wrap -->
 </main>
