--- a/index.html
+++ b/index.html
@@ -110,6 +110,126 @@
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://chrisheneric.com.au/">Chris Heneric</a></h3>
                 </div><!-- end class portfolio-col-inner -->
             </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://thrivinghorticulture.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://thrivinghorticulture.com.au/">Horticulture</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://dunnmetalworks.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://dunnmetalworks.com.au/">Dunn Metal Works</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://borderrubbishremoval.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://borderrubbishremoval.com.au/">Border Rubbish</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://allsteelandstumpsupplies.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://allsteelandstumpsupplies.com.au/">All Steel</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://stacymatthewsrealty.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://stacymatthewsrealty.com.au/">Stacy Matthews</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="http://lifesauce.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="http://lifesauce.com.au/">Life Sauce</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://blueysmechanicalservice.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://blueysmechanicalservice.com.au/">Blueys</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="http://racetecpaddles.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="http://racetecpaddles.com.au/">Racetec</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://www.shindomma.net/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://www.shindomma.net/">Shindo MMA</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://polleysrealty.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://polleysrealty.com.au/">Polley's Realty</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://sunshinethai.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://sunshinethai.com.au/">Sunshine Thai</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="http://heliosaccountants.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="http://heliosaccountants.com.au/">Helios</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="http://janmashtami.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="http://janmashtami.com.au/">Janmashtami</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="https://barbora.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="https://barbora.com.au/">Barbora</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
+            <div class="portfolio-col">
+                <div class="portfolio-col-inner">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                        <a class="view-cta" target="_blank" href="http://colonicsgoldcoast.com.au/"><i class="far fa-eye"></i> View Site</a>
+                    </div>
+                    <h3 class="portfolio-col-title"><a target="_blank" href="http://colonicsgoldcoast.com.au/">Colonics</a></h3>
+                </div><!-- end class portfolio-col-inner -->
+            </div><!-- end class portfolio-col -->
         </div><!-- end class portfolio-wrap -->
     </div><!-- end class wrap -->
 </main>
