--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="portfolio-wrap">
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-emaids.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-emaids-2.jpg');">
                         <a class="view-cta" target="_blank" href="http://emaidsinc.com/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="http://emaidsinc.com/">Emaids</a></h3>
@@ -32,7 +32,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm-2.jpg');">
                         <a class="view-cta" target="_blank" href="https://www.raincitymaids.com/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://www.raincitymaids.com/">Rain City Maids</a></h3>
@@ -40,7 +40,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-elite-sandstone.jpg');">
                         <a class="view-cta" target="_blank" href="http://www.qldsandstone.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="http://www.qldsandstone.com.au/">Elite Sandstone</a></h3>
@@ -48,7 +48,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-bmg.jpg');">
                         <a class="view-cta" target="_blank" href="https://www.bmglegal.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://www.bmglegal.com.au/">BMG</a></h3>
@@ -56,7 +56,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-clarit.jpg');">
                         <a class="view-cta" target="_blank" href="https://www.clarit.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://www.clarit.com.au/">Clarit</a></h3>
@@ -64,7 +64,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-henchman.jpg');">
                         <a class="view-cta" target="_blank" href="https://thehenchman.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://thehenchman.com.au/">Henchman</a></h3>
@@ -72,7 +72,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-sunrise.jpg');">
                         <a class="view-cta" target="_blank" href="https://sunriseresidences.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://sunriseresidences.com.au/">Sunrise</a></h3>
@@ -80,15 +80,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
-                        <a class="view-cta" target="_blank" href="https://coolyecoadventures.com.au/"><i class="far fa-eye"></i> View Site</a>
-                    </div>
-                    <h3 class="portfolio-col-title"><a target="_blank" href="https://coolyecoadventures.com.au/">Cooly Eco Adventures</a></h3>
-                </div><!-- end class portfolio-col-inner -->
-            </div><!-- end class portfolio-col -->
-            <div class="portfolio-col">
-                <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-a2z.jpg');">
                         <a class="view-cta" target="_blank" href="https://a2zsolar.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://a2zsolar.com.au/">A2Z Solar</a></h3>
@@ -96,7 +88,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-c2c.jpg');">
                         <a class="view-cta" target="_blank" href="https://www.countrytocoastlawyers.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://www.countrytocoastlawyers.com.au/">Country 2 Coast</a></h3>
@@ -104,7 +96,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-chris.jpg');">
                         <a class="view-cta" target="_blank" href="https://chrisheneric.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://chrisheneric.com.au/">Chris Heneric</a></h3>
@@ -112,7 +104,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-horticulture.jpg');">
                         <a class="view-cta" target="_blank" href="https://thrivinghorticulture.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://thrivinghorticulture.com.au/">Horticulture</a></h3>
@@ -120,7 +112,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-dunn.jpg');">
                         <a class="view-cta" target="_blank" href="https://dunnmetalworks.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://dunnmetalworks.com.au/">Dunn Metal Works</a></h3>
@@ -128,7 +120,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-border.jpg');">
                         <a class="view-cta" target="_blank" href="https://borderrubbishremoval.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://borderrubbishremoval.com.au/">Border Rubbish</a></h3>
@@ -136,7 +128,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-allsteel.jpg');">
                         <a class="view-cta" target="_blank" href="https://allsteelandstumpsupplies.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://allsteelandstumpsupplies.com.au/">All Steel</a></h3>
@@ -144,7 +136,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-stacy.jpg');">
                         <a class="view-cta" target="_blank" href="https://stacymatthewsrealty.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://stacymatthewsrealty.com.au/">Stacy Matthews</a></h3>
@@ -152,7 +144,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-lifesauce.jpg');">
                         <a class="view-cta" target="_blank" href="http://lifesauce.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="http://lifesauce.com.au/">Life Sauce</a></h3>
@@ -160,7 +152,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-bluey.jpg');">
                         <a class="view-cta" target="_blank" href="https://blueysmechanicalservice.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://blueysmechanicalservice.com.au/">Blueys</a></h3>
@@ -168,7 +160,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-racetec.jpg');">
                         <a class="view-cta" target="_blank" href="http://racetecpaddles.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="http://racetecpaddles.com.au/">Racetec</a></h3>
@@ -176,7 +168,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-shindo.jpg');">
                         <a class="view-cta" target="_blank" href="https://www.shindomma.net/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://www.shindomma.net/">Shindo MMA</a></h3>
@@ -184,7 +176,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-polley.jpg');">
                         <a class="view-cta" target="_blank" href="https://polleysrealty.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://polleysrealty.com.au/">Polley's Realty</a></h3>
@@ -192,7 +184,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-sunshine.jpg');">
                         <a class="view-cta" target="_blank" href="https://sunshinethai.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://sunshinethai.com.au/">Sunshine Thai</a></h3>
@@ -200,7 +192,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-helios.jpg');">
                         <a class="view-cta" target="_blank" href="http://heliosaccountants.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="http://heliosaccountants.com.au/">Helios</a></h3>
@@ -208,7 +200,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-janmashtami.jpg');">
                         <a class="view-cta" target="_blank" href="http://janmashtami.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="http://janmashtami.com.au/">Janmashtami</a></h3>
@@ -216,7 +208,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-barbora.jpg');">
                         <a class="view-cta" target="_blank" href="https://barbora.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="https://barbora.com.au/">Barbora</a></h3>
@@ -224,7 +216,7 @@
             </div><!-- end class portfolio-col -->
             <div class="portfolio-col">
                 <div class="portfolio-col-inner">
-                    <div class="portfolio-col-img" style="background-image:url('img/logo-rcm.jpg');">
+                    <div class="portfolio-col-img" style="background-image:url('img/logo-colonics.jpg');">
                         <a class="view-cta" target="_blank" href="http://colonicsgoldcoast.com.au/"><i class="far fa-eye"></i> View Site</a>
                     </div>
                     <h3 class="portfolio-col-title"><a target="_blank" href="http://colonicsgoldcoast.com.au/">Colonics</a></h3>
